--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "ansible-core>=2.18.5",
 ]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+]
